Fix height stretch

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html, body {
 
 .container {
   width:100%; 
-  height:100%;
   display: flex;
   justify-content: center;
   flex-direction: row;
